<resources>
    <string name="app_name">PickTime</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="slogn">Emoji your day</string>
    <string name="action_settings">Settings</string>
    <string name="title_entries_fragment">entries</string>
    <string name="title_stats_fragment">stats</string>
    <string name="emoji_rad">rad</string>
    <string name="emoji_good">good</string>
    <string name="emoji_meh">meh</string>
    <string name="emoji_fugly">fugly</string>
    <string name="emoji_awful">awful</string>
    <string name="Next">NEXT</string>
    <string name="How_are_you">HOW ARE YOU?</string>
    <string name="What_have_you_been_up_to">WHAT HAVE YOU BEEN UP TO?</string>
    <string name="coding">coding</string>
    <string name="study">study</string>
    <string name="shopping">shopping</string>
    <string name="gaming">gaming</string>
    <string name="party">party</string>
    <string name="reading">reading</string>
    <string name="sport">sport</string>
    <string name="dating">dating</string>
    <string name="good_meal">meal</string>
    <string name="travel">travel</string>
    <string name="add_note">add note</string>
    <string name="save">save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_entries_activity">add_entries_activity</string>
    <string name="title_activity_add_entries_detail">add_entries_detail</string>
</resources>
