<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="81dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/rad_selected" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/What_have_you_been_up_to"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/coding_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coding"
                android:textColor="#878583" />

            <CheckBox
                android:id="@+id/study_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study"
                android:textColor="#878583" />

            <CheckBox
                android:id="@+id/shopping_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping"
                android:textColor="#878583" />

            <CheckBox
                android:id="@+id/gaming_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gaming"
                android:textColor="#878583" />

            <CheckBox
                android:id="@+id/party_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/party"
                android:textColor="#878583" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/reading_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reading"
                android:textColor="#878583" />

            <CheckBox
                android:id="@+id/sport_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sport"
                android:textColor="#878583" />

            <CheckBox
                android:id="@+id/dating_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dating"
                android:textColor="#878583" />

            <CheckBox
                android:id="@+id/good_meal_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_meal"
                android:textColor="#878583" />

            <CheckBox
                android:id="@+id/travel_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel"
                android:textColor="#878583" />

        </LinearLayout>

    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/note_et"
            android:textSize="30dp"
            android:hint="@string/add_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
<Button
    android:id="@+id/save_btn"
    android:textColor="#ffffff"
    android:text="@string/save"
    android:background="@color/colorPrimary"
    android:layout_marginTop="30dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
</LinearLayout>
