<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:gravity="center_vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:textColor="#d8292929"
        android:layout_gravity="center"
        android:text="@string/How_are_you"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="10dp"
        android:text="today"
        android:id="@+id/date_tv"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/rad_btn"
            android:background="@drawable/rad_btn"
            android:layout_width="60dp"
            android:layout_height="60dp" />
        <ImageButton
            android:layout_marginLeft="5dp"
            android:id="@+id/good_btn"
            android:background="@drawable/good_btn"
            android:layout_width="60dp"
            android:layout_height="60dp" />
        <ImageButton
            android:layout_marginLeft="5dp"
            android:id="@+id/meh_btn"
            android:background="@drawable/meh_btn"
            android:layout_width="60dp"
            android:layout_height="60dp" />
        <ImageButton
            android:layout_marginLeft="5dp"
            android:id="@+id/fugly_btn"
            android:background="@drawable/fugly_btn"
            android:layout_width="60dp"
            android:layout_height="60dp" />
        <ImageButton
            android:id="@+id/awful_btn"
            android:layout_marginLeft="5dp"
            android:background="@drawable/awful_btn"
            android:layout_width="60dp"
            android:layout_height="60dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#f0870a"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/emoji_rad"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="60dp"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/emoji_good"
            android:textColor="#40a063"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="5dp"
            android:text="@string/emoji_meh"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="#8c52a0"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:text="@string/emoji_fugly"
            android:textColor="#5678a2"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="#566f79"
            android:text="@string/emoji_awful"
            android:layout_marginLeft="5dp"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
